--- a/src/styles/HumanResources/VacantPosition.css
+++ b/src/styles/HumanResources/VacantPosition.css
@@ -6,7 +6,7 @@
 }
 
 .vacante-header {
-  border-bottom: 2px solid #eaeaea;  
+  border-bottom: 2px solid #eaeaea;    
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -238,3 +238,10 @@
   border: 1px solid #f5a6a6;
 }
 
+.ant-btn.button-dropdown {
+  color: #000;
+  height: 30px;
+  font-size: small;
+  background-color: #f9f9f9;  
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
