--- a/src/styles/system/Header.css
+++ b/src/styles/system/Header.css
@@ -10,7 +10,12 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 1.5rem;
-  z-index: 1000; /* Asegura que esté por encima de otros elementos */
+  z-index: 1000; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.header button{
+  background-color: #2859d3;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
