--- a/src/styles/HumanResources/VacantPosition.css
+++ b/src/styles/HumanResources/VacantPosition.css
@@ -245,3 +245,19 @@
   background-color: #f9f9f9;  
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
+
+.modal-publishment-content {
+  max-height: 70vh;
+  overflow-y: auto;
+  padding-right: 1rem;
+  line-height: 1.6;
+}
+
+.modal-publishment-content h1,
+.modal-publishment-content h2 {
+  margin-top: 1rem;
+}
+
+.modal-publishment-content p {
+  margin-bottom: 1rem;
+}
