--- a/src/styles/Components/ModalInfo.css
+++ b/src/styles/Components/ModalInfo.css
@@ -42,7 +42,7 @@
 
 .modal-accept-button:hover,
 .modal-accept-button:focus {
-  background-color: #1e3ea8;
+  background-color: #2859d3;
   color: white;
   border: 2px solid #2859d3; /* 👈 borde azul al hacer hover/focus */
   outline: none;
